[gd_scene load_steps=8 format=3 uid="uid://c5qnedjs8xhcw"]

[ext_resource type="Script" uid="uid://dqt5jghej6xdr" path="res://scenes/menu/freeplay_menu.gd" id="1_ttjym"]
[ext_resource type="Texture2D" uid="uid://ciwp55vsaghii" path="res://assets/ui/menu/menuDesat.png" id="2_f7icd"]
[ext_resource type="Script" uid="uid://dy6vubwf3s2n6" path="res://scenes/menu/ui/alphabet_menu.gd" id="3_5h24w"]
[ext_resource type="FontFile" uid="uid://ddfumfkyfy17s" path="res://assets/ui/fonts/vcr.ttf" id="3_i0mk5"]
[ext_resource type="LabelSettings" uid="uid://ckiqm8178ehbn" path="res://assets/ui/fonts/alphabet_font_bold.tres" id="5_5h24w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0mk5"]
bg_color = Color(0, 0, 0, 0.529412)

[sub_resource type="LabelSettings" id="LabelSettings_5h24w"]
font = ExtResource("3_i0mk5")
font_size = 24

[node name="freeplay_menu" type="Node2D"]
script = ExtResource("1_ttjym")

[node name="background" type="Sprite2D" parent="."]
modulate = Color(0.8, 0.8, 0.8, 1)
position = Vector2(643, 365)
texture = ExtResource("2_f7icd")

[node name="song_menu" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_5h24w")
distance = Vector2(30, 50)
offset = Vector2(50, 0)
metadata/_custom_type_script = "uid://73nl8weocxpd"

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
metadata/_edit_lock_ = true

[node name="tip_text" type="Label" parent="ui"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -282.0
offset_top = -33.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_i0mk5")
theme_override_font_sizes/font_size = 20
text = "[ Ungrouped ]
Push Q/E to Switch Categories
Push R to Select a Random Song"
horizontal_alignment = 2

[node name="score_text" type="Label" parent="ui"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -225.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_i0mk5")
text = "HIGH SCORE: 0"
label_settings = SubResource("LabelSettings_5h24w")
horizontal_alignment = 1

[node name="diff_text" type="Label" parent="ui/score_text"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.5
offset_top = -22.0
offset_right = 112.5
grow_horizontal = 2
grow_vertical = 0
text = "« Difficulty »"
label_settings = SubResource("LabelSettings_5h24w")
horizontal_alignment = 1
vertical_alignment = 2

[node name="label" type="Label" parent="."]
offset_left = -1817.0
offset_top = -600.0
offset_right = -1077.0
offset_bottom = -57.0
text = "HI, THE FUCK
YOU LOOKING AT?

   LATIN
ABCDFEFGHIJK
LMNOPQRSTUVW
XYZ
   CYRILLIC
АБВГДЕЁЖЗИЙКЛМ
НОПРСТУФХЦ
ЧШЩЪЫЬЭЮЯ"
label_settings = ExtResource("5_5h24w")
vertical_alignment = 1
